--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
+    "dev": "bun --bun node_modules/.bin/next dev --turbopack",
+    "build": "bun --bun node_modules/.bin/next build",
+    "start": "bun --bun node_modules/.bin/next start",
+    "lint": "bun --bun node_modules/.bin/next lint",
     "format": "prettier --write ."
   },
   "dependencies": {
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
+    "@types/bun": "^1.1.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
