get started with db schema

--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
+    "db:dbml": "bun drizzle/generate-dbml.ts",
     "dev": "bun --bun node_modules/next/dist/bin/next dev --turbo",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "lint": "bun --bun node_modules/next/dist/bin/next lint",
-    "lint:fix": "next lint --fix",
-    "preview": "next build && next start",
-    "start": "next start",
+    "lint:fix": "bun --bun node_modules/next/dist/bin/next lint --fix",
+    "preview": "bun --bun node_modules/next/dist/bin/next build && bun --bun node_modules/next/dist/bin/next start",
+    "start": "bun --bun node_modules/next/dist/bin/next start",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -44,6 +45,7 @@
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
+    "drizzle-dbml-generator": "^0.9.0",
     "drizzle-kit": "^0.24.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^15.0.1",
