use bun sqlite, update scripts

--- a/package.json
+++ b/package.json
@@ -4,20 +4,20 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "bun --bun node_modules/next/dist/bin/next build",
-    "check": "bun --bun node_modules/next/dist/bin/next lint && tsc --noEmit",
-    "db:generate": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate",
-    "db:push": "drizzle-kit push",
-    "db:studio": "drizzle-kit studio",
+    "build": "bun --bun next build",
+    "check": "bun --bun next lint && tsc --noEmit",
+    "db:generate": "bun --bun drizzle-kit generate",
+    "db:migrate": "bun --bun drizzle-kit migrate",
+    "db:push": "bun --bun drizzle-kit push",
+    "db:studio": "bun --bun drizzle-kit studio",
     "db:dbml": "bun drizzle/generate-dbml.ts",
-    "dev": "bun --bun node_modules/next/dist/bin/next dev --turbo",
-    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
-    "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
-    "lint": "bun --bun node_modules/next/dist/bin/next lint",
-    "lint:fix": "bun --bun node_modules/next/dist/bin/next lint --fix",
-    "preview": "bun --bun node_modules/next/dist/bin/next build && bun --bun node_modules/next/dist/bin/next start",
-    "start": "bun --bun node_modules/next/dist/bin/next start",
+    "dev": "bun --bun next dev --turbo",
+    "format:check": "bun --bun prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
+    "format:write": "bun --bun prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
+    "lint": "bun --bun next lint",
+    "lint:fix": "bun --bun next lint --fix",
+    "preview": "bun --bun next build && bun --bun next start",
+    "start": "bun --bun next start",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -39,6 +39,7 @@
     "zod": "^3.23.3"
   },
   "devDependencies": {
+    "@types/bun": "^1.1.13",
     "@types/eslint": "^8.56.10",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
