--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "build": "bun --bun node_modules/.bin/next build",
     "check": "bun --bun node_modules/.bin/next lint && tsc --noEmit",
-    "db:generate": "bun --bun node_modules/.bin/drizzle-kit generate",
-    "db:migrate": "bun --bun node_modules/.bin/drizzle-kit migrate",
-    "db:push": "bun --bun node_modules/.bin/drizzle-kit push",
-    "db:studio": "bun --bun node_modules/.bin/drizzle-kit studio",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
     "db:dbml": "bun drizzle/generate-dbml.ts",
     "dev": "bun --bun node_modules/.bin/next dev --turbo",
     "format:check": "bun --bun node_modules/.bin/prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
