--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lint": "bun --bun eslint \"**/*.{ts,tsx,js,jsx,mdx}\"",
     "lint:fix": "bun --bun eslint \"**/*.{ts,tsx,js,jsx,mdx}\" --fix",
     "typecheck": "bun --bun tsc --noEmit",
-    "e2e-ui": "bun playwright test --ui "
+    "e2e": "bun playwright test --ui-host=0.0.0.0"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
